Added html for number of sides input

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <h1>Sketch an Etch!</h1>
+    <label for="sides">pick your sides! Less than 100 please, don't be greedy</label>
+    <input type ="number" id="sides" name="sides" min="1" max="2" />
     <div id="grid"></div>
     <div id ="buttons"></div> 
 </body>
