--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     <h1>Sketch an Etch!</h1>
-    <label for="sides">pick your sides! Less than 100 please, don't be greedy</label>
-    <input type ="number" id="sides" name="sides" min="1" max="2" />
+    <div class="input">
+        <label for="sides">Pick your sides! Less than 100 please, don't be greedy</label>
+        <input type ="number" id="sides" name="sides" min="1" max="2" placeholder="10" step="5" />
+    </div>
     <div id="grid"></div>
     <div id ="buttons"></div> 
 </body>
