--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Sketch an Etch!</h1>
     <div class="input">
         <label for="sides">Pick your sides! Less than 100 please, don't be greedy</label>
-        <input type ="number" id="sides" name="sides" min="1" max="2" placeholder="10" step="5" />
+        <input type ="number" id="sides" name="sides" min="1" max="100" value="10" step="5" />
     </div>
     <div id="grid"></div>
     <div id ="buttons"></div> 
