--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <h1>Sketch an Etch!</h1>
     <div class="input">
         <label for="sides">Pick your sides! Less than 100 please, don't be greedy</label>
+        <br>
         <input type ="number" id="sides" name="sides" min="1" max="100" value="10" step="5" />
+        <button id = "new">LET'S ETCH!</button>
     </div>
     <div id="grid"></div>
     <div id ="buttons"></div> 
