--- a/index.html
+++ b/index.html
@@ -10,12 +10,19 @@
 <body>
     <h1>Sketch an Etch!</h1>
     <div class="input">
+        <!--
         <label for="sides">Pick your sides! Less than 100 please, don't be greedy</label>
         <br>
-        <input type ="number" id="sides" name="sides" min="1" max="100" value="10" step="5" />
-        <button id = "new">LET'S ETCH!</button>
+        <input type ="number" id="sides" name="sides" min="1" max="100" placeholder="10" step="5" />
+        -->
+        <h1>Pick your sides!</h1>
+        <button id = "ten">10 Sides!</button>
+        <button id = "twenty">20 Sides</button>
+        <button id = "thirty">30 Sides</button>
     </div>
-    <div id="grid"></div>
-    <div id ="buttons"></div> 
+    <div id="grid" class=".grid-container">
+        <div id ="gridItems"></div>
+    </div>
+    
 </body>
 </html>
