Playing around with fonts for text, decided to keep it basic

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Etch-A-Sketch</title>
 </head>
 <body>
-    <h1>Sketch an Etch!</h1>
+    <h1 id="title">Sketch an Etch!</h1>
     <div class="input">
         <!--
         <label for="sides">Pick your sides! Less than 100 please, don't be greedy</label>
@@ -17,8 +17,8 @@
         -->
         <h1>Pick your sides!</h1>
         <button id = "ten">10 Sides!</button>
-        <button id = "twenty">20 Sides</button>
-        <button id = "thirty">30 Sides</button>
+        <button id = "twenty">20 Sides!</button>
+        <button id = "thirty">30 Sides!</button>
     </div>
     <div id="grid" class=".grid-container">
         <div id ="gridItems"></div>
