Added CSS to make layout look nicer

--- a/index.html
+++ b/index.html
@@ -9,20 +9,23 @@
 </head>
 <body>
     <h1 id="title">Sketch an Etch!</h1>
-    <div class="input">
-        <!--
-        <label for="sides">Pick your sides! Less than 100 please, don't be greedy</label>
-        <br>
-        <input type ="number" id="sides" name="sides" min="1" max="100" placeholder="10" step="5" />
-        -->
-        <h1>Pick your sides!</h1>
-        <button id = "ten">10 Sides!</button>
-        <button id = "twenty">20 Sides!</button>
-        <button id = "thirty">30 Sides!</button>
+    <div class = "main">
+        <div class="input">
+            <!--
+            <label for="sides">Pick your sides! Less than 100 please, don't be greedy</label>
+            <br>
+            <input type ="number" id="sides" name="sides" min="1" max="100" placeholder="10" step="5" />
+            -->
+            <h2>Pick your sides!</h2>
+            <button id = "ten">10 Sides!</button>
+            <button id = "twenty">20 Sides!</button>
+            <button id = "thirty">30 Sides!</button>
+            <br>
+            <h2>Pick your colour!</h2>
+        </div>
+        <div id="grid" class=".grid-container">
+            <div id ="gridItems"></div>
+        </div>
     </div>
-    <div id="grid" class=".grid-container">
-        <div id ="gridItems"></div>
-    </div>
-    
 </body>
 </html>
