Added html for colour buttons

--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
             <br>
             <input type ="number" id="sides" name="sides" min="1" max="100" placeholder="10" step="5" />
             -->
-            <h2>Pick your sides!</h2>
+            <h2> Pick your sides!</h2>
             <button id = "ten">10 Sides!</button>
             <button id = "twenty">20 Sides!</button>
             <button id = "thirty">30 Sides!</button>
             <br>
-            <h2>Pick your colour!</h2>
+            <h2> Pick your colour!</h2>
+            <button id = "black">Blackness</button>
+            <button id = "colour">Colours</button>
         </div>
         <div id="grid" class=".grid-container">
             <div id ="gridItems"></div>
