Added random button which randomizes the colour of the pixel. Not yet random colour for each pixel

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
             <button id = "thirty">30 Sides!</button>
             <br>
             <h2> Pick your colour!</h2>
-            <button id = "black">Blackness</button>
-            <button id = "colour">Colours</button>
+            <button id = "orange">Funky Orange</button>
+            <button id = "green">Stanky Green</button>
+            <button id = "random">Random Abandon</button>
         </div>
         <div id="grid" class=".grid-container">
             <div id ="gridItems"></div>
